@startuml
!include ../style.puml
skinparam arrowThickness 1.1
skinparam classAttributeIconSize 0

class Ui UI_COLOR {
    - {static} DIVIDER : String
    - {static} LOGO : String
    - scanner : Scanner
    + Ui()
    + readInput() : String
    + {static} printWelcome() : void
    + {static} printGoodbye() : void
    + {static} printSuccess(message : String) : void
    + {static} printError(message : String) : void
    + {static} printInfo(message : String) : void
    + {static} printUnknownCommand(command : String) : void
    + {static} printHelp() : void
    + {static} printDivider() : void
    + {static} printTasksForSku(skuId : String, tasks : List<SKUTask>) : void
    + {static} printTasksByPriority(priority : String, tasks : List<SKUTask>) : void
    + {static} printTasksByDistance(fromLocation : String, formattedEntries : List<String>) : void
    + {static} printAllTasks(skuList : SKUList) : void
    + {static} printSearchHeader() : void
    + {static} printSearchFooter(results : List<String>) : void
}

class SKUList MODEL_COLOR {
    + getSKUList() : List<SKU>
    + isEmpty() : boolean
}

class SKU MODEL_COLOR {
    + getSKUID() : String
    + getSKUTaskList() : SKUTaskList
}

class SKUTask MODEL_COLOR_T2 {
    + getSKUTaskID() : String
}

class ItemTasker LOGIC_COLOR {
    + {static} main(args : String[]) : void
}

class CommandRunner LOGIC_COLOR_T2 {
}

Ui ..> SKUList : <<uses>>
Ui ..> SKU : <<uses>>
Ui ..> SKUTask : <<uses>>
ItemTasker ..> Ui : <<uses>>
CommandRunner ..> Ui : <<uses>>
@enduml
